movie description added, scrollbar issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
   color: var(--color-text);
   background-color: var(--color-background-900);
   padding: 2.4rem;
+  scroll-behavior: smooth;
 }
 
 /* ******* */
@@ -58,6 +59,11 @@ body {
   position: relative;
   scroll-behavior: smooth;
   overflow: auto;
+  -webkit-scrollbar,
+  .list::-webkit-scrollbar {
+    display: none;
+    scroll-behavior: smooth;
+  }
 }
 
 .loader {
